# pi-daemon

./: $GITHUB_OUTPUT  .gitignore  AGENT_PROMPT.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: _build.yml  _code-review.yml  _hygiene.yml  _lint-format.yml  _sandbox.yml  _scope-gate.yml  _security.yml  _test.yml  arch-review.yml  architectural-review.yml  auto-approve.yml  ci-main.yml  ci.yml  ci.yml.backup  code-review.yml  docs-check.yml  pr-hygiene.yml  pr-pipeline.yml  sandbox-test.yml  scope-gate.yml  security.yml  template-sync.yml  test-quality-review.yml  wiki-sync.yml
crates/pi-daemon-api/: Cargo.toml
crates/pi-daemon-api/src/: lib.rs  middleware.rs  openai_compat.rs  routes.rs  server.rs  state.rs  webchat.rs  ws.rs
crates/pi-daemon-api/static/: index_body.html  index_head.html
crates/pi-daemon-api/static/css/: components.css  layout.css  theme.css
crates/pi-daemon-api/static/js/: app.js
crates/pi-daemon-api/static/js/pages/: agents.js  chat.js  overview.js  settings.js
crates/pi-daemon-api/tests/: api_integration.rs  openai_integration.rs  webchat_integration.rs  websocket_integration.rs
crates/pi-daemon-cli/: Cargo.toml
crates/pi-daemon-cli/src/: daemon.rs  main.rs
crates/pi-daemon-cli/tests/: cli_tests.rs  daemon_tests.rs
crates/pi-daemon-kernel/: Cargo.toml
crates/pi-daemon-kernel/src/: config.rs  event_bus.rs  github.rs  kernel.rs  lib.rs  registry.rs
crates/pi-daemon-kernel/tests/: kernel_lifecycle.rs  registry_concurrent.rs
crates/pi-daemon-pi-manager/: Cargo.toml
crates/pi-daemon-pi-manager/src/: config.rs  discovery.rs  installer.rs  lib.rs
crates/pi-daemon-provider/: Cargo.toml
crates/pi-daemon-provider/src/: anthropic.rs  convert.rs  lib.rs  openai.rs  openrouter.rs  provider.rs  router.rs  sse.rs  types.rs
crates/pi-daemon-provider/tests/: provider_tests.rs
crates/pi-daemon-test-utils/: Cargo.toml
crates/pi-daemon-test-utils/src/: client.rs  kernel.rs  lib.rs  macros.rs  mock_provider.rs  server.rs
crates/pi-daemon-test-utils/tests/: integration.rs
crates/pi-daemon-types/: Cargo.toml
crates/pi-daemon-types/src/: agent.rs  config.rs  error.rs  event.rs  lib.rs  message.rs
docs/: API-Reference.md  Architecture.md  Configuration.md  Contributing.md  Getting-Started.md  Home.md  PR-Reviews.md  Phases.md  Testing.md  _Footer.md  _Sidebar.md
docs/templates/: feature-request.md
extensions/pi-daemon-bridge/: README.md  package-lock.json  package.json  tsconfig.json
extensions/pi-daemon-bridge/src/: index.ts
scripts/: scope-gate.sh  test-local.sh  test-scope-gate.sh
tests/e2e/: daemon_lifecycle.rs  mod.rs
