
[workspace]
resolver = "2"
members = [
    "crates/pi-daemon-types",
    "crates/pi-daemon-kernel",
    "crates/pi-daemon-api",
    "crates/pi-daemon-cli",
    "crates/pi-daemon-test-utils", # Added for CI foundation
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/demonseed-jpg/pi-daemon"
rust-version = "1.94"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Misc
dirs = "6"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
bytes = "1"

# Test dependencies
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
