[package]
name = "pi-daemon-cli"
version.workspace = true
edition.workspace = true
description = "CLI for pi-daemon"
publish = false

[[bin]]
name = "pi-daemon"
path = "src/main.rs"

[dependencies]
pi-daemon-kernel = { path = "../pi-daemon-kernel" }
pi-daemon-api = { path = "../pi-daemon-api" }
pi-daemon-types = { path = "../pi-daemon-types" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
