[package]
name = "pi-daemon-kernel"
version.workspace = true
edition.workspace = true
description = "Agent kernel — registry, event bus, config"
publish = false

[dependencies]
pi-daemon-types = { path = "../pi-daemon-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
