[package]
name = "pi-daemon-provider"
version.workspace = true
edition.workspace = true
description = "LLM provider clients — streaming completions from Anthropic, OpenAI, and OpenRouter"
publish = false

[dependencies]
pi-daemon-types = { path = "../pi-daemon-types" }
tokio = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tokio = { workspace = true }
