[package]
name = "pi-daemon-test-utils"
version.workspace = true
edition.workspace = true
description = "Shared test utilities for pi-daemon"

[dependencies]
pi-daemon-kernel = { path = "../pi-daemon-kernel" }
pi-daemon-api = { path = "../pi-daemon-api" }
pi-daemon-types = { path = "../pi-daemon-types" }
tokio = { workspace = true, features = ["macros"] }
axum = { workspace = true }
reqwest = { workspace = true }
tempfile = "3"

[dev-dependencies]
assert_json = "*"
