[package]
name = "pi-daemon-types"
version.workspace = true
edition.workspace = true
description = "Core types and traits for pi-daemon"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
